--- a/assets/style.css
+++ b/assets/style.css
@@ -33,11 +33,14 @@ body {
   }
   
   .color-circle {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin-top: 8px;
     border: 2px solid #d8d8d8;
     border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    color: #f2f2f2;
   }
   
   
